--- a/client/chat-frontend/src/app/public/component/register/register.component.html
+++ b/client/chat-frontend/src/app/public/component/register/register.component.html
@@ -1,1 +1,36 @@
-<p>register works!</p>
+<div class="container">
+  <div>
+    <div class="login">
+      <a [routerLink]="['../login']">Go to Login!</a>
+    </div>
+
+    <div>
+      <mat-card>
+        <mat-card-title>Register</mat-card-title>
+        <mat-card-content>
+          <form [formGroup]="form" (ngSubmit)="register()">
+            <mat-form-field>
+              <input type="email" matInput placeholder="Email" formControlName="email">
+            </mat-form-field>
+
+            <mat-form-field>
+              <input type="text" matInput placeholder="Username" formControlName="username">
+            </mat-form-field>
+
+            <mat-form-field>
+              <input type="password" matInput placeholder="Password" formControlName="password">
+            </mat-form-field>
+
+            <mat-form-field>
+              <input type="password" matInput placeholder="Password Confirm" formControlName="passwordConfirm">
+            </mat-form-field>
+
+            <div class="button">
+              <button type="submit" mat-raised-button color="primary" [disabled]="!form.valid">Register</button>
+            </div>
+          </form>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </div>
+</div>
