finished working with register component

--- a/client/chat-frontend/src/app/public/component/register/register.component.html
+++ b/client/chat-frontend/src/app/public/component/register/register.component.html
@@ -11,19 +11,28 @@
           <form [formGroup]="form" (ngSubmit)="register()">
             <mat-form-field>
               <input type="email" matInput placeholder="Email" formControlName="email">
+              <mat-error *ngIf="email.touched && email.hasError('required')">Email is required</mat-error>
+              <mat-error *ngIf="email.touched && email.hasError('email')">Email must be valid</mat-error>
             </mat-form-field>
 
             <mat-form-field>
               <input type="text" matInput placeholder="Username" formControlName="username">
+              <mat-error *ngIf="username.touched && username.hasError('required')">Username is required</mat-error>
             </mat-form-field>
 
             <mat-form-field>
               <input type="password" matInput placeholder="Password" formControlName="password">
+              <mat-error *ngIf="password.touched && password.hasError('required')">Password is required</mat-error>
             </mat-form-field>
 
             <mat-form-field>
               <input type="password" matInput placeholder="Password Confirm" formControlName="passwordConfirm">
+              <mat-error *ngIf="passwordConfirm.touched && form.hasError('passwordNotMatching')">Password not matching</mat-error>
             </mat-form-field>
+
+            <mat-hint *ngIf="!form.valid"><small>Please fill out all needed information</small></mat-hint>
+            <mat-error *ngIf="passwordConfirm.touched && form.hasError('passwordsNotMatching')"><small>Passwords are not
+              matching</small></mat-error>
 
             <div class="button">
               <button type="submit" mat-raised-button color="primary" [disabled]="!form.valid">Register</button>
