--- a/client/chat-frontend/src/app/public/component/login/login.component.html
+++ b/client/chat-frontend/src/app/public/component/login/login.component.html
@@ -1,2 +1,31 @@
-<p>login works!</p>
-<button mat-raised-button [routerLink]="['../register']">Go to register page!</button>
+<div class="container">
+  <div>
+    <div class="register">
+      <a [routerLink]="['../register']">Go to Register!</a>
+    </div>
+
+    <div>
+      <mat-card>
+        <mat-card-title>Login</mat-card-title>
+        <mat-card-content>
+          <form [formGroup]="form" (ngSubmit)="login()">
+            <mat-form-field>
+              <input type="email" matInput placeholder="Email" formControlName="email">
+              <mat-error *ngIf="email.touched && email.hasError('required')">Email is required</mat-error>
+              <mat-error *ngIf="email.touched && email.hasError('email')">Email must be valid</mat-error>
+            </mat-form-field>
+
+            <mat-form-field>
+              <input type="password" matInput placeholder="Password" formControlName="password">
+              <mat-error *ngIf="password.touched && password.hasError('required')">Password is required</mat-error>
+            </mat-form-field>
+
+            <div class="button">
+              <button type="submit" mat-raised-button color="primary" [disabled]="!form.valid">Login</button>
+            </div>
+          </form>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </div>
+</div>
