added logic for user select in form

--- a/client/chat-frontend/src/app/public/component/login/login.component.html
+++ b/client/chat-frontend/src/app/public/component/login/login.component.html
@@ -20,6 +20,8 @@
               <mat-error *ngIf="password.touched && password.hasError('required')">Password is required</mat-error>
             </mat-form-field>
 
+            <mat-hint *ngIf="!form.valid"><small>Please fill out all needed information</small></mat-hint>
+
             <div class="button">
               <button type="submit" mat-raised-button color="primary" [disabled]="!form.valid">Login</button>
             </div>
