--- a/client/chat-frontend/src/app/private/components/create-room/create-room.component.html
+++ b/client/chat-frontend/src/app/private/components/create-room/create-room.component.html
@@ -1,7 +1,8 @@
 <div class="container">
+
   <div>
     <div class="dashboard">
-      <a [routerLink]="['../dashboard']">Go to Dashboard!</a>
+      <a [routerLink]="['../dashboard']">Go to Dashboard</a>
     </div>
 
     <div>
@@ -9,6 +10,7 @@
         <mat-card-title>Create Chatroom</mat-card-title>
         <mat-card-content>
           <form [formGroup]="form" (ngSubmit)="create()">
+
             <mat-form-field>
               <input type="text" matInput placeholder="Name" formControlName="name">
               <mat-error *ngIf="name.touched && name.hasError('required')">Name is required</mat-error>
@@ -18,13 +20,15 @@
               <input type="text" matInput placeholder="Description" formControlName="description">
             </mat-form-field>
 
-            <app-select-users [users] = "users.value" (addUser) = "addUser(initUser($event))"></app-select-users>
+            <app-select-users [users]="users.value" (addUser)="addUser(initUser($event))"
+            ></app-select-users>
 
             <mat-hint *ngIf="!form.valid"><small>Please fill out all needed information</small></mat-hint>
 
             <div class="button">
-              <button type="submit" mat-raised-button color="primary" [disabled]="!form.valid">Create Chatroom</button>
+              <button mat-button type="submit" [disabled]="!form.valid">Create Chatroom</button>
             </div>
+
           </form>
         </mat-card-content>
       </mat-card>
