--- a/client/chat-frontend/src/app/private/components/dashboard/dashboard.component.html
+++ b/client/chat-frontend/src/app/private/components/dashboard/dashboard.component.html
@@ -5,22 +5,24 @@
       <div>
         <h1>My Chatrooms</h1>
         <button mat-button [routerLink]="['../create-room']">Create new Room</button>
-        <span *ngIf="(rooms$ | async)?.items && (rooms$ | async)?.items?.length; else no_rooms">
-          <mat-selection-list [multiple]="false" (selectionChange)="onSelectRoom($event)">
-            <mat-list-option *ngFor="let room of (rooms$ | async)?.items" [value]="room">
-              Name: {{room.name}} Id: {{room.id}}
-              <mat-divider></mat-divider>
-            </mat-list-option>
-          </mat-selection-list>
-          <mat-paginator [length]="(rooms$ | async)?.meta?.totalItems" [pageIndex]="(rooms$ | async)?.meta?.currentPage"
-                         [pageSize]="(rooms$ | async)?.meta?.itemCount" (page)="onPaginateRooms($event)"
-                         [pageSizeOptions]="[10,25,50]"></mat-paginator>
-        </span>
+        <ng-container *ngIf="rooms$ | async as rooms">
+          <ng-container *ngIf="rooms.items.length > 0; else no_rooms">
+            <mat-selection-list [multiple]="false" (selectionChange)="onSelectRoom($event)">
+              <mat-list-option *ngFor="let room of rooms.items" [value]="room">
+                Name: {{room.name}} Id: {{room.id}}
+                <mat-divider></mat-divider>
+              </mat-list-option>
+            </mat-selection-list>
+            <mat-paginator [length]="rooms.meta.totalItems" [pageIndex]="rooms.meta.currentPage"
+                           [pageSize]="rooms.meta.itemCount" (page)="onPaginateRooms($event)"
+                           [pageSizeOptions]="[10,25,50]"></mat-paginator>
+          </ng-container>
+        </ng-container>
       </div>
 
       <div style="margin-left: 40px;">
         <h1>My Room</h1>
-        {{(selectedRoom | json)}}
+        {{ selectedRoom | json }}
       </div>
 
     </div>
