--- a/client/chat-frontend/src/app/private/components/chat-room/chat-room.component.html
+++ b/client/chat-frontend/src/app/private/components/chat-room/chat-room.component.html
@@ -1,26 +1,45 @@
 <div *ngIf="chatRoom; else no_chatroom_selected">
-  <div style="height: 125px">
-    <span style="display: flex; flex-direction: row; align-items: center; justify-content: space-between">
+
+  <!-- Header -->
+  <div style="height: 125px;">
+    <span style="display: flex; flex-direction: row; align-items: center; justify-content: space-between;">
       <h2>{{chatRoom.name}}</h2>
-      <span style="display: flex; flex-direction: row; align-items: center">
-        <mat-icon>
-          event
-        </mat-icon>
-        <p style="margin-left: 10px">{{chatRoom.updated_at | date}}</p>
+      <span style="display: flex; flex-direction: row; align-items: center;">
+        <mat-icon>event</mat-icon>
+        <p style="margin-left: 10px;">{{chatRoom.updated_at | date}}</p>
       </span>
     </span>
     <span>
-      <h3 style="color: gray">{{chatRoom.description}}</h3>
+      <h3 style="color: grey">{{chatRoom.description}}</h3>
       <span *ngFor="let user of chatRoom.users">{{user.username}}, </span>
     </span>
   </div>
 
-  <div style="background-color: rgb(236,236,236); height: 400px; overflow-y: scroll;">
-    <span *ngFor="let message of (messages$ | async)?.items">{{message.text}}</span>
+  <!-- Messages -->
+  <div class="message">
+    <span *ngFor="let message of (messages$ | async)?.items">
+      <app-chat-message [message]="message"></app-chat-message>
+    </span>
   </div>
 
+  <!-- Add Message -->
+  <div style="position: absolute; bottom: 0; display: flex; flex-direction: row; align-items: center;">
+    <mat-form-field style="width: 350px;">
+      <input matInput [formControl]="chatMessage" type="text">
+    </mat-form-field>
+    <button mat-button [disabled]="!chatMessage.valid" (click)="sendMessage()">
+      <span style="display: flex; flex-direction: row; align-items: center;">
+        <mat-icon style="margin-left: 20px;">send</mat-icon>
+        <p style="margin-left:10px;">Send</p>
+      </span>
+    </button>
+
+  </div>
 </div>
 
+
+
+
 <ng-template #no_chatroom_selected>
-  <mat-error>No ChatRoom selected</mat-error>
+  <mat-error>No Chatroom Selected</mat-error>
 </ng-template>
