--- a/client/chat-frontend/src/app/private/components/chat-message/chat-message.component.html
+++ b/client/chat-frontend/src/app/private/components/chat-message/chat-message.component.html
@@ -1,3 +1,5 @@
-<p>
+<span style="display: flex;" [ngClass]="{ownContainer: message?.user?.id === user.id}">
+<p [ngClass]="{ownMessage: message?.user?.id === user.id}">
   <em>{{message?.user?.username}}</em> <br/> {{message?.text}}
 </p>
+</span>
