--- a/client/chat-frontend/src/app/private/components/create-room/create-room.component.html
+++ b/client/chat-frontend/src/app/private/components/create-room/create-room.component.html
@@ -21,7 +21,7 @@
             </mat-form-field>
 
             <app-select-users [users]="users.value" (addUser)="addUser(initUser($event))"
-            ></app-select-users>
+                              (removeUser)="removeUser($event.id)"></app-select-users>
 
             <mat-hint *ngIf="!form.valid"><small>Please fill out all needed information</small></mat-hint>
 
